# rocket-forum

./: .clocignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Webeng.json  build.rs  config.toml  docker-compose.yml  flake.nix  package-lock.json  result
db/: init.surql
frontend/: colorpalette.txt  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/stores/: auth.ts  comments.ts  posts.ts
frontend/src/lib/utils/: tagColors.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/new/: +page.svelte
frontend/src/routes/signup/: +page.svelte
frontend/src/routes/success/: +page.svelte
frontend/src/style/: app.css  colors.css  login.css  mainpage.css  new.css  signup.css
src/: auth.rs  common_redirects.rs  config.rs  cors.rs  db.rs  error.rs  fingerprinting.rs  main.rs  minio.rs  moderation.rs  post.rs  ratelimit.rs  ratelimiting.rs  redis.rs  token_bucket.lua  util.rs
src/queries/: check_nearest_fingerprint.surql  create_client_fingerprint.surql  create_comment.surql  create_post.surql  create_session.surql  create_user.surql  delete_post.surql  get_comment.surql  get_comment_author.surql  get_comments_on_post.surql  get_latest_posts.surql  get_post.surql  get_post_author.surql  get_post_by_hashtags.surql  get_userid_from_sessionid.surql  like.surql  login.surql
src/utils/: brute_login.py
templates/: trackme-known.html.hbs  trackme-unknown.html.hbs  trackme.html.hbs
