[package]
name = "webeng"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
faker_rand = "0.1.1"
rand = "0.8.5"
thiserror = "1.0.64"
