[package]
name = "webeng"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid", "secrets"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
faker_rand = "0.1.1"
rand = "0.8.5"
thiserror = "1.0.64"
rocket_cors = "0.6.0"
lazy-regex = "3.4.1"
fastembed = "4.8.0"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
minio-rsc = "0.2.3"
blake3 = "1.8.2"
bytes = "1.10.1"
